--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>http://lexworks.co.in/, Coming Soon!</h1>
+    <h1>www.lexworks.co.in, Coming Soon!</h1>
 
   </body>
 </html>
