--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>Hello, world!</title>
+    <style>
+      body {
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
     <h1>www.lexworks.co.in, Coming Soon!</h1>
