--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Hello, world!</title>
     <style>
       body {
+        background-color: #F6f6f6;
         text-align: center;
       }
     </style>
