--- a/index.html
+++ b/index.html
@@ -555,89 +555,8 @@
     <!-- Services End -->
 
 
-
-    <!-- Features Start -->
-    <div class="container-fluid features overflow-hidden py-5">
-        <div class="container">
-            <div class="section-title text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">
-                <div class="sub-style">
-                    <h5 class="sub-title text-primary px-3">Why Choose Us</h5>
-                </div>
-                <h1 class="display-5 mb-4">Offer Tailor Made Services That Our Client Requires</h1>
-                <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat deleniti amet at atque
-                    sequi quibusdam cumque itaque repudiandae temporibus, eius nam mollitia voluptas maxime veniam
-                    necessitatibus saepe in ab? Repellat!</p>
-            </div>
-            <div class="row g-4 justify-content-center text-center">
-                <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="feature-item text-center p-4">
-                        <div class="feature-icon p-3 mb-4">
-                            <i class="fas fa-dollar-sign fa-4x text-primary"></i>
-                        </div>
-                        <div class="feature-content d-flex flex-column">
-                            <h5 class="mb-3">Cost-Effective</h5>
-                            <p class="mb-3">Dolor, sit amet consectetur adipisicing elit. Soluta inventore cum
-                                accusamus,</p>
-                            <a class="btn btn-secondary rounded-pill" href="#">Read More<i
-                                    class="fas fa-arrow-right ms-2"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.3s">
-                    <div class="feature-item text-center p-4">
-                        <div class="feature-icon p-3 mb-4">
-                            <i class="fab fa-cc-visa fa-4x text-primary"></i>
-                        </div>
-                        <div class="feature-content d-flex flex-column">
-                            <h5 class="mb-3">Visa Assistance</h5>
-                            <p class="mb-3">Dolor, sit amet consectetur adipisicing elit. Soluta inventore cum
-                                accusamus,</p>
-                            <a class="btn btn-secondary rounded-pill" href="#">Read More<i
-                                    class="fas fa-arrow-right ms-2"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="feature-item text-center p-4">
-                        <div class="feature-icon p-3 mb-4">
-                            <i class="fas fa-atlas fa-4x text-primary"></i>
-                        </div>
-                        <div class="feature-content d-flex flex-column">
-                            <h5 class="mb-3">Faster Processing</h5>
-                            <p class="mb-3">Dolor, sit amet consectetur adipisicing elit. Soluta inventore cum
-                                accusamus,</p>
-                            <a class="btn btn-secondary rounded-pill" href="#">Read More<i
-                                    class="fas fa-arrow-right ms-2"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.7s">
-                    <div class="feature-item text-center p-4">
-                        <div class="feature-icon p-3 mb-4">
-                            <i class="fas fa-users fa-4x text-primary"></i>
-                        </div>
-                        <div class="feature-content d-flex flex-column">
-                            <h5 class="mb-3">Direct Interviews</h5>
-                            <p class="mb-3">Dolor, sit amet consectetur adipisicing elit. Soluta inventore cum
-                                accusamus,</p>
-                            <a class="btn btn-secondary rounded-pill" href="#">Read More<i
-                                    class="fas fa-arrow-right ms-2"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12">
-                    <a class="btn btn-primary border-secondary rounded-pill py-3 px-5 wow fadeInUp"
-                        data-wow-delay="0.1s" href="#">More Features</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Features End -->
-
-
-
     <!-- Countries We Offer Start -->
-    <div class="container-fluid country bg-light overflow-hidden py-5">
+    <div class="container-fluid country overflow-hidden py-5">
         <div class="container">
             <div class="section-title text-center wow fadeInUp" data-wow-delay="0.1s" style="margin-bottom: 70px;">
                 <div class="sub-style">
@@ -709,98 +628,6 @@
         </div>
     </div>
     <!-- Countries We Offer End -->
-
-
-    <!-- Testimonial Start -->
-    <div class="container-fluid testimonial overflow-hidden pb-5">
-        <div class="container py-5">
-            <div class="section-title text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">
-                <div class="sub-style">
-                    <h5 class="sub-title text-primary px-3">OUR CLIENTS RIVIEWS</h5>
-                </div>
-                <h1 class="display-5 mb-4">What Our Clients Say</h1>
-                <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat deleniti amet at atque
-                    sequi quibusdam cumque itaque repudiandae temporibus, eius nam mollitia voluptas maxime veniam
-                    necessitatibus saepe in ab? Repellat!</p>
-            </div>
-            <div class="owl-carousel testimonial-carousel wow zoomInDown" data-wow-delay="0.2s">
-                <div class="testimonial-item">
-                    <div class="testimonial-content p-4 mb-5">
-                        <p class="fs-5 mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                            exercitati eiusmod tempor incididunt.
-                        </p>
-                        <div class="d-flex justify-content-end">
-                            <i class="fas fa-star text-secondary"></i>
-                            <i class="fas fa-star text-secondary"></i>
-                            <i class="fas fa-star text-secondary"></i>
-                            <i class="fas fa-star text-secondary"></i>
-                            <i class="fas fa-star text-secondary"></i>
-                        </div>
-                    </div>
-                    <div class="d-flex">
-                        <div class="rounded-circle me-4" style="width: 100px; height: 100px;">
-                            <img class="img-fluid rounded-circle" src="img/testimonial-1.jpg" alt="img">
-                        </div>
-                        <div class="my-auto">
-                            <h5>Person Name</h5>
-                            <p class="mb-0">Profession</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="testimonial-item">
-                    <div class="testimonial-content p-4 mb-5">
-                        <p class="fs-5 mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                            exercitati eiusmod tempor incididunt.
-                        </p>
-                        <div class="d-flex justify-content-end">
-                            <i class="fas fa-star text-secondary"></i>
-                            <i class="fas fa-star text-secondary"></i>
-                            <i class="fas fa-star text-secondary"></i>
-                            <i class="fas fa-star text-secondary"></i>
-                            <i class="fas fa-star text-secondary"></i>
-                        </div>
-                    </div>
-                    <div class="d-flex">
-                        <div class="rounded-circle me-4" style="width: 100px; height: 100px;">
-                            <img class="img-fluid rounded-circle" src="img/testimonial-2.jpg" alt="img">
-                        </div>
-                        <div class="my-auto">
-                            <h5>Person Name</h5>
-                            <p class="mb-0">Profession</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="testimonial-item">
-                    <div class="testimonial-content p-4 mb-5">
-                        <p class="fs-5 mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                            exercitati eiusmod tempor incididunt.
-                        </p>
-                        <div class="d-flex justify-content-end">
-                            <i class="fas fa-star text-secondary"></i>
-                            <i class="fas fa-star text-secondary"></i>
-                            <i class="fas fa-star text-secondary"></i>
-                            <i class="fas fa-star text-secondary"></i>
-                            <i class="fas fa-star text-secondary"></i>
-                        </div>
-                    </div>
-                    <div class="d-flex">
-                        <div class="rounded-circle me-4" style="width: 100px; height: 100px;">
-                            <img class="img-fluid rounded-circle" src="img/testimonial-3.jpg" alt="img">
-                        </div>
-                        <div class="my-auto">
-                            <h5>Person Name</h5>
-                            <p class="mb-0">Profession</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Testimonial End -->
-
 
 
     <!-- Training Start -->
@@ -904,83 +731,6 @@
         </div>
     </div>
     <!-- Training End -->
-
-
-    <!-- Contact Start -->
-    <div class="container-fluid contact overflow-hidden pb-5">
-        <div class="container py-5">
-            <div class="office pt-5">
-                <div class="section-title text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="sub-style">
-                        <h5 class="sub-title text-primary px-3">Worlwide Offices</h5>
-                    </div>
-                    <h1 class="display-5 mb-4">Explore Our Office Worldwide</h1>
-                    <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat deleniti amet at
-                        atque sequi quibusdam cumque itaque repudiandae temporibus, eius nam mollitia voluptas maxime
-                        veniam necessitatibus saepe in ab? Repellat!</p>
-                </div>
-                <div class="row g-4 justify-content-center">
-                    <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.1s">
-                        <div class="office-item p-4">
-                            <div class="office-img mb-4">
-                                <img src="img/office-2.jpg" class="img-fluid w-100 rounded" alt="">
-                            </div>
-                            <div class="office-content d-flex flex-column">
-                                <h4 class="mb-2">Australia</h4>
-                                <a href="#" class="text-secondary fs-5 mb-2">+123.456.7890</a>
-                                <a href="#" class="text-muted fs-5 mb-2">travisa@example.com</a>
-                                <p class="mb-0">123, First Floor, 123 St Roots Terrace, Los Angeles 90010 Unitd States
-                                    of America.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.3s">
-                        <div class="office-item p-4">
-                            <div class="office-img mb-4">
-                                <img src="img/office-1.jpg" class="img-fluid w-100 rounded" alt="">
-                            </div>
-                            <div class="office-content d-flex flex-column">
-                                <h4 class="mb-2">Canada</h4>
-                                <a href="#" class="text-secondary fs-5 mb-2">(012) 0345 6789</a>
-                                <a href="#" class="text-muted fs-5 mb-2">travisa@example.com</a>
-                                <p class="mb-0">123, First Floor, 123 St Roots Terrace, Los Angeles 90010 Unitd States
-                                    of America.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.5s">
-                        <div class="office-item p-4">
-                            <div class="office-img mb-4">
-                                <img src="img/office-3.jpg" class="img-fluid w-100 rounded" alt="">
-                            </div>
-                            <div class="office-content d-flex flex-column">
-                                <h4 class="mb-2">United Kingdom</h4>
-                                <a href="#" class="text-secondary fs-5 mb-2">01234.567.890</a>
-                                <a href="#" class="text-muted fs-5 mb-2">travisa@example.com</a>
-                                <p class="mb-0">123, First Floor, 123 St Roots Terrace, Los Angeles 90010 Unitd States
-                                    of America.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.7s">
-                        <div class="office-item p-4">
-                            <div class="office-img mb-4">
-                                <img src="img/office-4.jpg" class="img-fluid w-100 rounded" alt="">
-                            </div>
-                            <div class="office-content d-flex flex-column">
-                                <h4 class="mb-2">India</h4>
-                                <a href="#" class="text-secondary fs-5 mb-2">+123.45.67890</a>
-                                <a href="#" class="text-muted fs-5 mb-2">travisa@example.com</a>
-                                <p class="mb-0">123, First Floor, 123 St Roots Terrace, Los Angeles 90010 Unitd States
-                                    of America.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Contact End -->
 
 
     <!-- Footer Start -->
