--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                                 <img src="img/service-1.jpg" class="img-fluid rounded-start" alt="...">
                             </div>
                             <div class="col-md-8">
-                                <div class="card-body">
+                                <div class="card-body bg-white">
                                     <h5 class="card-title">Card title</h5>
                                     <p class="card-text">This is a wider card with supporting text below as a natural
                                         lead-in to additional content.</p>
@@ -218,7 +218,7 @@
                                 <img src="img/service-1.jpg" class="img-fluid rounded-start" alt="...">
                             </div>
                             <div class="col-md-8">
-                                <div class="card-body">
+                                <div class="card-body bg-white">
                                     <h5 class="card-title">Card title</h5>
                                     <p class="card-text">This is a wider card with supporting text below as a natural
                                         lead-in to additional content.</p>
@@ -235,7 +235,7 @@
                                 <img src="img/service-1.jpg" class="img-fluid rounded-start" alt="...">
                             </div>
                             <div class="col-md-8">
-                                <div class="card-body">
+                                <div class="card-body bg-white">
                                     <h5 class="card-title">Card title</h5>
                                     <p class="card-text">This is a wider card with supporting text below as a natural
                                         lead-in to additional content.</p>
@@ -250,7 +250,7 @@
                                 <img src="img/service-1.jpg" class="img-fluid rounded-start" alt="...">
                             </div>
                             <div class="col-md-8">
-                                <div class="card-body">
+                                <div class="card-body bg-white">
                                     <h5 class="card-title">Card title</h5>
                                     <p class="card-text">This is a wider card with supporting text below as a natural
                                         lead-in to additional content.</p>
