update bg white

--- a/index.html
+++ b/index.html
@@ -197,13 +197,13 @@
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-xl-6 wow fadeInLeft" data-wow-delay="0.1s">
-                    <div class="card mb-3">
+                    <div class="card bg-white mb-3">
                         <div class="row g-0">
                             <div class="col-md-4">
                                 <img src="img/service-1.jpg" class="img-fluid rounded-start" alt="...">
                             </div>
                             <div class="col-md-8">
-                                <div class="card-body bg-white">
+                                <div class="card-body">
                                     <h5 class="card-title">Card title</h5>
                                     <p class="card-text">This is a wider card with supporting text below as a natural
                                         lead-in to additional content.</p>
@@ -212,13 +212,13 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card mb-3">
+                    <div class="card bg-white mb-3">
                         <div class="row g-0">
                             <div class="col-md-4">
                                 <img src="img/service-1.jpg" class="img-fluid rounded-start" alt="...">
                             </div>
                             <div class="col-md-8">
-                                <div class="card-body bg-white">
+                                <div class="card-body">
                                     <h5 class="card-title">Card title</h5>
                                     <p class="card-text">This is a wider card with supporting text below as a natural
                                         lead-in to additional content.</p>
@@ -229,13 +229,13 @@
                     </div>
                 </div>
                 <div class="col-xl-6 wow fadeInRight" data-wow-delay="0.3s">
-                    <div class="card mb-3">
+                    <div class="card bg-white mb-3">
                         <div class="row g-0">
                             <div class="col-md-4">
                                 <img src="img/service-1.jpg" class="img-fluid rounded-start" alt="...">
                             </div>
                             <div class="col-md-8">
-                                <div class="card-body bg-white">
+                                <div class="card-body">
                                     <h5 class="card-title">Card title</h5>
                                     <p class="card-text">This is a wider card with supporting text below as a natural
                                         lead-in to additional content.</p>
@@ -244,13 +244,13 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card mb-3">
+                    <div class="card bg-white mb-3">
                         <div class="row g-0">
                             <div class="col-md-4">
                                 <img src="img/service-1.jpg" class="img-fluid rounded-start" alt="...">
                             </div>
                             <div class="col-md-8">
-                                <div class="card-body bg-white">
+                                <div class="card-body">
                                     <h5 class="card-title">Card title</h5>
                                     <p class="card-text">This is a wider card with supporting text below as a natural
                                         lead-in to additional content.</p>
