--- a/contactus.html
+++ b/contactus.html
@@ -326,7 +326,7 @@
     <!-- Copyright Start -->
     <div class="container-fluid copyright py-4">
         <div class="container">
-            <div class="row g-4 align-items-center">
+            <div class="row g-4 align-items-center abc">
                 <div class="col-md-6 text-center text-md-start mb-md-0">
                     <span class="text-primary"><a href="https://lexworks.co.in/" class="border-bottom text-primary"><i lass="fas fa-copyright me-2"></i>www.lexworks.co.in</a>, All right reserved.</span>
                 </div>
