--- a/contactus.html
+++ b/contactus.html
@@ -114,7 +114,7 @@
                                         <a href="#" class="dropdown-item">
                                             <div class="menuItem">
                                                 <span>Consumer Protection Law</span> 
-                                                <span class="menuItemSmall">(Alphabetical order)</span>
+                                                <!-- <span class="menuItemSmall">(Alphabetical order)</span> -->
                                             </div>
                                         </a>
                                         <a href="#" class="dropdown-item">Family Law</a>
@@ -138,7 +138,7 @@
         <!-- Header Start -->
         <div class="container-fluid bg-breadcrumb">
             <div class="container text-center py-5" style="max-width: 900px;">
-                <h3 class="text-white display-3 mb-4 wow fadeInDown" data-wow-delay="0.1s">Contact Us</h1>
+                <h3 class="text-white display-4 mb-4 wow fadeInDown" data-wow-delay="0.1s">Contact Us</h1>
                 <ol class="breadcrumb justify-content-center text-white mb-0 wow fadeInDown" data-wow-delay="0.3s">
                     <li class="breadcrumb-item"><a href="index.html" class="text-white">Home</a></li>
                     <li class="breadcrumb-item"><a href="#" class="text-white">Pages</a></li>
@@ -149,14 +149,14 @@
         <!-- Header End -->
 
         <!-- Contact Start -->
-        <div class="container-fluid contact overflow-hidden py-5">
+        <div class="container-fluid contact overflow-hidden py-1">
             <div class="container py-5">
                 <div class="row g-5 mb-5">
                     <div class="col-lg-6 wow fadeInLeft" data-wow-delay="0.1s">
-                        <div class="sub-style">
+                        <div class="sub-style mb-4">
                             <h5 class="sub-title text-primary pe-3">Find Us</h5>
                         </div>
-                        <h1 class="display-5 mb-4">We all here to Navigate your legal needs.</h1>
+                        <!-- <h1 class="display-5 mb-4">We all here to Navigate your legal needs.</h1> -->
                         <!-- <p class="mb-5">Please reach out to use with any quiesion or to schedule a Consultation.</p> -->
                         <div class="d-flex border-bottom mb-4 pb-4">
                             <i class="fas fa-map-marked-alt fa-4x text-primary bg-light p-3 rounded"></i>
@@ -168,7 +168,9 @@
                         <div class="row g-3">
                             <div class="col-xl-6">
                                 <div class="d-flex">
-                                    <i class="fas fa-tty fa-3x text-primary"></i>
+                                    <div class="bg-light d-flex align-items-center justify-content-center" style="width: 60px; height: 60px; border-radius: 10px;">
+                                        <i class="fas fa-tty fa-2x text-primary"></i>
+                                    </div>
                                     <div class="ps-3">
                                         <h5 class="mb-3">Quick Contact</h5>
                                         <div class="mb-3">
@@ -184,7 +186,9 @@
                             </div>
                             <div class="col-xl-6">
                                 <div class="d-flex">
-                                    <i class="fas fa-clone fa-3x text-primary"></i>
+                                    <div class="bg-light d-flex align-items-center justify-content-center" style="width: 60px; height: 60px; border-radius: 10px;">
+                                        <i class="fas fa-clone fa-2x text-primary" style="font-size: 26px;"></i>
+                                    </div>
                                     <div class="ps-3">
                                         <h5 class="mb-3">Office Hours</h5>
                                         <div class="mb-3">
@@ -193,7 +197,7 @@
                                         </div>
                                         <div class="mb-3">
                                             <h6 class="mb-0">WeekEnds:</h6>
-                                            <a href="#" class="fs-5 text-primary">Sat & Sun is our vacation</a>
+                                            <a href="#" class="fs-5 text-primary">12.00PM to 05.00PM</a>
                                         </div>
                                     </div>
                                 </div>
@@ -201,20 +205,31 @@
                         </div>
                         <div class="d-flex align-items-center pt-3">
                             <div class="me-4">
-                                <div class="bg-light d-flex align-items-center justify-content-center" style="width: 90px; height: 90px; border-radius: 10px;"><i class="fas fa-share fa-3x text-primary"></i></div>
+                                <div class="bg-light d-flex align-items-center justify-content-center" style="width: 60px; height: 60px; border-radius: 10px;">
+                                    <i class="fas fa-share fa-2x text-primary"></i>
+                                </div>
                             </div>
                             <div class="d-flex">
-                                <a class="btn btn-secondary border-secondary me-2 p-0" href="">LinkedIn <i class="fas fa-chevron-circle-right"></i></a>
-                                <a class="btn btn-secondary border-secondary mx-2 p-0" href="">Instagram <i class="fas fa-chevron-circle-right"></i></a>
-                                <a class="btn btn-secondary border-secondary mx-2 p-0" href="">Youtube <i class="fas fa-chevron-circle-right"></i></a>
+                                <a class="btn me-3 p-0 facbookColor" href="#">
+                                    LinkedIn 
+                                    <i class="fab fa-facebook-square fa-2x align-middle"></i>
+                                </a>
+                                <a class="btn mx-3 p-0 instagramColor" href="#">
+                                    Instagram 
+                                    <i class="fab fa-instagram-square fa-2x align-middle"></i>
+                                </a>
+                                <a class="btn mx-3 p-0 youtubeColor" href="#">
+                                    Youtube 
+                                    <i class="fab fa-youtube-square fa-2x align-middle"></i>
+                                </a>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-6 wow fadeInRight" data-wow-delay="0.3">
-                        <div class="sub-style">
+                        <div class="sub-style mb-4">
                             <h5 class="sub-title text-primary pe-3">Get in Touch</h5>
                         </div>
-                        <h1 class="display-5 mb-4">We all here to Navigate your legal needs.</h1>
+                        <!-- <h1 class="display-5 mb-4">We all here to Navigate your legal needs.</h1> -->
                         <p class="mb-5">Please reach out to use with any quiesion or to schedule a Consultation.</p>
                         <!-- <h1 class="display-5 mb-4">Send Your Message</h1>
                         <p class="mb-3">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a class="text-primary fw-bold" href="https://htmlcodex.com/contact-form">Download Now</a>.</p> -->
@@ -265,7 +280,7 @@
     <div class="container-fluid footer py-5 wow fadeIn" data-wow-delay="0.2s">
         <div class="container py-5">
             <div class="row g-5">
-                <div class="col-md-6 col-lg-6 col-xl-3">
+                <div class="col-md-6 col-lg-7 col-xl-4">
                     <div class="footer-item d-flex flex-column">
                         <h4 class="text-secondary mb-4">Contact Info</h4>
                         <a href=""><i class="fa fa-map-marker-alt me-2"></i>C-131, 1st Floor Lajpat Nagar <br /> New Delhi - 110024</a>
@@ -274,13 +289,13 @@
                         <a href="" class="mb-3"><i class="fas fa-print me-2"></i> 011-41540229</a>
                         <div class="d-flex align-items-center">
                             <i class="fas fa-share fa-2x text-secondary me-2"></i>
-                            <a class="btn mx-1" href=""><i class="fab fa-linkedin-in"></i></a>
-                            <a class="btn mx-1" href=""><i class="fab fa-instagram"></i></a>
-                            <a class="btn mx-1" href=""><i class="fab fa-youtube"></i></a>
+                            <a class="btn mx-1 linkedInHover" href="#"><i class="fab fa-2x fa-linkedin-in"></i></a>
+                            <a class="btn mx-1 instagramHover" href="#"><i class="fab fa-2x fa-instagram"></i></a>
+                            <a class="btn mx-1 youtubeHover" href="#"><i class="fab fa-2x fa-youtube"></i></a>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-6 col-xl-3">
+                <div class="col-md-6 col-lg-5 col-xl-3">
                     <div class="footer-item d-flex flex-column">
                         <h4 class="text-secondary mb-4">Office Hours</h4>
                         <div class="mb-3">
@@ -289,22 +304,22 @@
                         </div>
                         <div class="mb-3">
                             <h6 class="text-muted mb-0">WeekEnds:</h6>
-                            <p class="text-white mb-0">All Saturday & Sunday is our vacation</p>
+                            <p class="text-white mb-0">12.00 pm to 05.00 pm</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-6 col-xl-3">
+                <div class="col-md-6 col-lg-12 col-xl-5">
                     <div class="footer-item d-flex flex-column">
-                        <h4 class="text-secondary mb-4">Our Services</h4>
-                        <a href="#" class=""><i class="fas fa-angle-right me-2"></i> Business</a>
-                        <a href="#" class=""><i class="fas fa-angle-right me-2"></i> Evaluation</a>
-                        <a href="#" class=""><i class="fas fa-angle-right me-2"></i> Migrate</a>
-                        <a href="#" class=""><i class="fas fa-angle-right me-2"></i> Study</a>
-                        <a href="#" class=""><i class="fas fa-angle-right me-2"></i> Counselling</a>
-                        <a href="#" class=""><i class="fas fa-angle-right me-2"></i> Work / Career</a>
+                        <h4 class="text-secondary mb-4">Proficiencies</h4>
+                        <a href="#" class=""><i class="fas fa-angle-right me-2"></i> Litigation &amp; dispute redressals</a>
+                        <a href="#" class=""><i class="fas fa-angle-right me-2"></i> Offering business formation, compliance &amp; Contracts</a>
+                        <a href="#" class=""><i class="fas fa-angle-right me-2"></i> Resolution facilities &amp; ADR</a>
+                        <a href="#" class=""><i class="fas fa-angle-right me-2"></i> Tax Laws &amp; Compliance</a>
+                        <a href="#" class=""><i class="fas fa-angle-right me-2"></i> Brand Protection (IPR)</a>
+                        <!-- <a href="#" class=""><i class="fas fa-angle-right me-2"></i> Work / Career</a> -->
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-6 col-xl-3">
+                <!-- <div class="col-md-6 col-lg-6 col-xl-3">
                     <div class="footer-item">
                         <h4 class="text-secondary mb-4">Newsletter</h4>
                         <p class="text-white mb-3">Dolor amet sit justo amet elitr clita ipsum elitr est.Lorem ipsum
@@ -316,7 +331,7 @@
                                 class="btn btn-primary rounded-pill position-absolute top-0 end-0 py-2 mt-2 me-2">SignUp</button>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
@@ -326,7 +341,7 @@
     <!-- Copyright Start -->
     <div class="container-fluid copyright py-4">
         <div class="container">
-            <div class="row g-4 align-items-center abc">
+            <div class="row g-4 align-items-center">
                 <div class="col-md-6 text-center text-md-start mb-md-0">
                     <span class="text-primary"><a href="https://lexworks.co.in/" class="border-bottom text-primary"><i lass="fas fa-copyright me-2"></i>www.lexworks.co.in</a>, All right reserved.</span>
                 </div>
