--- a/contactus.html
+++ b/contactus.html
@@ -86,7 +86,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0">
-                        <a href="index.html" class="nav-item nav-link active">Home</a>
+                        <a href="index.html" class="nav-item nav-link">Home</a>
                         <a href="aboutus.html" class="nav-item nav-link">About Us</a>
                         <a href="ourteam.html" class="nav-item nav-link">Our Team</a>
                         <div class="nav-item dropdown">
@@ -123,7 +123,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="contactus.html" class="nav-item nav-link">Contact Us</a>
+                        <a href="contactus.html" class="nav-item nav-link active">Contact Us</a>
                     </div>
                     <!-- <button class="btn btn-primary btn-md-square border-secondary mb-3 mb-md-3 mb-lg-0 me-3"
                         data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fas fa-search"></i></button> -->
