--- a/ourteam.html
+++ b/ourteam.html
@@ -86,9 +86,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto py-0">
-                    <a href="index.html" class="nav-item nav-link active">Home</a>
+                    <a href="index.html" class="nav-item nav-link">Home</a>
                     <a href="aboutus.html" class="nav-item nav-link">About Us</a>
-                    <a href="ourteam.html" class="nav-item nav-link">Our Team</a>
+                    <a href="ourteam.html" class="nav-item nav-link active">Our Team</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link" data-bs-toggle="dropdown"><span class="dropdown-toggle">Practice
                                 Area</span></a>
