--- a/index.html
+++ b/index.html
@@ -103,22 +103,22 @@
                                 </div>
                                 <div class="py-1 px-2">
                                     <div class="py-2 cPx-3 text-dark text-inline"><strong>Other Areas</strong></div>
-                                    <a href="#" class="dropdown-item">Arbitration</a>
-                                    <a href="#" class="dropdown-item">Banking & Finance</a>
-                                    <a href="#" class="dropdown-item">Corporate</a>
-                                    <a href="#" class="dropdown-item">Direct Tax</a>
-                                    <a href="#" class="dropdown-item">Insolvency</a>
-                                    <a href="#" class="dropdown-item">Real State Law</a>
-                                    <a href="#" class="dropdown-item">Cervical & Civil Citation</a>
-                                    <a href="#" class="dropdown-item">Cyber Law</a>
-                                    <a href="#" class="dropdown-item">
-                                        <div class="menuItem">
-                                            <span>Consumer Protection Law</span> 
-                                            <span class="menuItemSmall">(Alphabetical order)</span>
-                                        </div>
-                                    </a>
-                                    <a href="#" class="dropdown-item">Family Law</a>
-                                    <a href="#" class="dropdown-item">Contractual Law</a>
+                                        <a href="#" class="dropdown-item">Arbitration</a>
+                                        <a href="#" class="dropdown-item">Banking & Finance</a>
+                                        <a href="#" class="dropdown-item">Corporate</a>
+                                        <a href="#" class="dropdown-item">Cervical & Civil Citation</a>
+                                        <a href="#" class="dropdown-item">Cyber Law</a>
+                                        <a href="#" class="dropdown-item">
+                                            <div class="menuItem">
+                                                <span>Consumer Protection Law</span> 
+                                                <!-- <span class="menuItemSmall">(Alphabetical order)</span> -->
+                                            </div>
+                                        </a>
+                                        <a href="#" class="dropdown-item">Contractual Law</a>
+                                        <a href="#" class="dropdown-item">Direct Tax</a>
+                                        <a href="#" class="dropdown-item">Family Law</a>
+                                        <a href="#" class="dropdown-item">Insolvency</a>
+                                        <a href="#" class="dropdown-item">Real State Law</a>
                                 </div>
                             </div>
                         </div>
