--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
                                 <img src="img/country-1.jpg" class="img-fluid w-100 rounded" alt="Image">
                             </div>
                             <div class="country-flag">
-                                <img src="img/brazil.jpg" class="img-fluid rounded-circle" alt="Image">
+                                <img src="img/hammer.png" class="img-fluid rounded-circle" alt="Image">
                             </div>
                             <div class="country-name">
                                 <a href="#" class="text-white fs-4">Adv. Akhil Krishan Maggu</a>
@@ -645,7 +645,7 @@
                                 <img src="img/country-2.jpg" class="img-fluid w-100 rounded" alt="Image">
                             </div>
                             <div class="country-flag">
-                                <img src="img/india.jpg" class="img-fluid rounded-circle" alt="Image">
+                                <img src="img/hammer.png" class="img-fluid rounded-circle" alt="Image">
                             </div>
                             <div class="country-name">
                                 <a href="#" class="text-white fs-4">Vikas Sareen</a>
@@ -658,7 +658,7 @@
                                 <img src="img/country-3.jpg" class="img-fluid w-100 rounded" alt="Image">
                             </div>
                             <div class="country-flag">
-                                <img src="img/usa.jpg" class="img-fluid rounded-circle" alt="Image">
+                                <img src="img/hammer.png" class="img-fluid rounded-circle" alt="Image">
                             </div>
                             <div class="country-name">
                                 <a href="#" class="text-white fs-4">AYUSH MITTAL</a>
@@ -671,7 +671,7 @@
                                 <img src="img/country-4.jpg" class="img-fluid w-100 rounded" alt="Image">
                             </div>
                             <div class="country-flag">
-                                <img src="img/italy.jpg" class="img-fluid rounded-circle" alt="Image">
+                                <img src="img/hammer.png" class="img-fluid rounded-circle" alt="Image">
                             </div>
                             <div class="country-name">
                                 <a href="#" class="text-white fs-4">Maninder Kaur</a>
