--- a/contactus.html
+++ b/contactus.html
@@ -211,7 +211,7 @@
                                 </div>
                             </div>
                             <div class="d-flex">
-                                <a class="btn me-3 p-0 facbookColor" href="#">
+                                <a class="btn me-3 p-0 linkedinColor" href="#">
                                     LinkedIn 
                                     <i class="fab fa-linkedin fa-2x align-middle"></i>
                                 </a>
