--- a/contactus.html
+++ b/contactus.html
@@ -107,7 +107,7 @@
                                         <a href="#" class="dropdown-item">Arbitration</a>
                                         <a href="#" class="dropdown-item">Banking & Finance</a>
                                         <a href="#" class="dropdown-item">Corporate Law</a>
-                                        <a href="#" class="dropdown-item">Criminal of Civil Litigation</a>
+                                        <a href="#" class="dropdown-item">Criminal & Civil Litigation</a>
                                         <a href="#" class="dropdown-item">Cyber Law</a>
                                         <a href="#" class="dropdown-item">
                                             <div class="menuItem">
