update content of the team

--- a/ourteam.html
+++ b/ourteam.html
@@ -154,26 +154,31 @@
         <div class="container-fluid py-5">
             <div class="container py-5">
                 <div class="row g-5">
-                    <div class="col-xl-5 wow fadeInLeft" data-wow-delay="0.1s">
+                    <div class="col-xl-4 wow fadeInLeft" data-wow-delay="0.1s">
                         <div class="bg-light rounded">
                             <img src="img/about-2.png" class="img-fluid w-100" style="margin-bottom: -7px;" alt="Image">
                             <img src="img/about-3.jpg" class="img-fluid w-100 border-bottom border-5 border-primary"
                                 style="border-top-right-radius: 300px; border-top-left-radius: 300px;" alt="Image">
                         </div>
                     </div>
-                    <div class="col-xl-7 wow fadeInRight" data-wow-delay="0.3s">
-                        <h5 class="sub-title mb-4 pe-3">About Us</h5>
-                        <h3 class="display-7 mb-2">Your Trusted Legal Partner</h3>
-                        <p class="mb-4">At <strong>Lex Works</strong> our foundation is built on the inspiration to resolve legal and technical challenges for those in need. We are dedicated to being a source of support and guidance for our clients. Our inspiration comes from a desire to assist those who need it most by offering nationwide legal solutions and bringing our expertise to clients across India.</p>
+                    <div class="col-xl-8 wow fadeInRight" data-wow-delay="0.3s">
 
-                        <h3 class="display-7 mb-2">Dedicated to Excellence</h3>
-                        <p class="mb-4">We aim to provide the best possible outcomes for our clients' legal issues and we offer a comprehensive one-stop solution that addresses your unique needs.</p>
+                        <h5 class="sub-title mb-4 pe-3">VIKAS SAREEN</h5>
 
-                        <h3 class="display-7 mb-2">Remarkable Success</h3>
-                        <p class="mb-4">We have earned numerous landmark judgments, showcasing our commitment to delivering immediate solutions and taking prompt action on behalf of our clients. Our expertise ensures that your legal matters are in capable hands.</p>
+                        <h4 class="customs-title"><em>Position:</em> Partner</h4>
 
-                        <h3 class="display-7 mb-2">Client-Centric Approach</h3>
-                        <p class="mb-4">We offer exceptional legal consultation in various fields, with a steadfast commitment to ethics. Our clients can trust us to deliver a level of satisfaction and reliability that they can depend on throughout their legal journey.</p>
+                        <h3 class="customs-heading mb-4">Education: LL.B. (H), 2009</h3>
+
+                        <p><strong>VIKAS SAREEN</strong> is a dedicated Partner at <strong>Lex Works</strong>, bringing over 11 years of comprehensive experience in criminal and commercial litigation, dispute resolution, negotiation, and indirect tax matters, including customs, excise, and GST cases. A graduate of law with honors, he has developed a deep expertise that allows him to navigate complex legal landscapes with skill and confidence.</p>
+
+                        <p>Throughout his career, <strong>VIKAS SAREEN</strong> has successfully represented clients in mediations, arbitrations, and settlement negotiations, appearing before various esteemed forums, including the Hon'ble Supreme Court of India and the Hon'ble Delhi High Court. He has handled significant cases under the Customs Act and COFEPOSA, as well as economic offenses, showcasing his ability to manage high-stakes situations effectively.</p>
+
+                        <p><strong>VIKAS SAREEN</strong> is particularly proficient in legal and real estate due diligence, joint ventures, leasing, and transactional negotiations related to property disputes. He believes in a strategic approach to litigation, advising clients on the best practices and procedures to follow, and has a proven track record of independently managing cases from trial through all levels of appeals.</p>
+
+                        <p>In addition to his legal expertise, <strong>VIKAS SAREEN</strong> has facilitated the management of diverse legal, regulatory, and compliance matters, ensuring that organizational goals are met while minimizing risks. Known for his innovative solutions and strong work ethic, he makes high-stakes decisions in fast-paced environments, always with integrity and professionalism. As a leader at <strong>Lex Works</strong>, he is dedicated to fostering a collaborative environment that prioritizes client success and the professional growth of team members.</p>
+
+                        <p class="mb-4"><strong>VIKAS SAREEN</strong> is excited to continue driving the firm's mission forward, leveraging his extensive experience to navigate the challenges of today's legal landscape.</p>
+
                     </div>
                 </div>
             </div>
@@ -185,18 +190,19 @@
             <div class="container py-5">
                 <div class="row g-5">
                     <div class="col-xl-7 wow fadeInLeft" data-wow-delay="0.3s">
-                        <h5 class="sub-title mb-4 pe-3">About Us</h5>
-                        <h3 class="display-7 mb-2">Your Trusted Legal Partner</h3>
-                        <p class="mb-4">At <strong>Lex Works</strong> our foundation is built on the inspiration to resolve legal and technical challenges for those in need. We are dedicated to being a source of support and guidance for our clients. Our inspiration comes from a desire to assist those who need it most by offering nationwide legal solutions and bringing our expertise to clients across India.</p>
 
-                        <h3 class="display-7 mb-2">Dedicated to Excellence</h3>
-                        <p class="mb-4">We aim to provide the best possible outcomes for our clients' legal issues and we offer a comprehensive one-stop solution that addresses your unique needs.</p>
+                        <h5 class="sub-title mb-4 pe-3">AYUSH MITTAL</h5>
 
-                        <h3 class="display-7 mb-2">Remarkable Success</h3>
-                        <p class="mb-4">We have earned numerous landmark judgments, showcasing our commitment to delivering immediate solutions and taking prompt action on behalf of our clients. Our expertise ensures that your legal matters are in capable hands.</p>
+                        <h4 class="customs-title"><em>Position:</em> Senior Associate</h4>
 
-                        <h3 class="display-7 mb-2">Client-Centric Approach</h3>
-                        <p class="mb-4">We offer exceptional legal consultation in various fields, with a steadfast commitment to ethics. Our clients can trust us to deliver a level of satisfaction and reliability that they can depend on throughout their legal journey.</p>
+                        <h3 class="customs-heading mb-4">Education: B.A. LL.B., 2022</h3>
+
+                        <p><strong>AYUSH MITTAL</strong> is a dedicated senior associate at <strong>Lex Works</strong>, specializing in civil, commercial, and intellectual property rights litigation. A recent graduate with a Bachelor of Arts in Law, he brings fresh perspectives and a strong commitment to delivering effective legal solutions for clients.</p>
+
+                        <p>With a keen interest in navigating complex legal disputes, <strong>AYUSH MITTAL</strong> has quickly developed a reputation for his analytical skills and attention to detail. He is passionate about protecting clients' rights and ensuring fair outcomes in all matters. He values open communication and collaboration, striving to build strong relationships with clients and colleagues alike.</p>
+
+                        <p class="mb-4"><strong>AYUSH MITTAL</strong> is excited to contribute to the success of <strong>Lex Works</strong> and looks forward to tackling new challenges in the dynamic world of law.</p>
+
                     </div>
                     <div class="col-xl-5 wow fadeInRight" data-wow-delay="0.1s">
                         <div class="bg-light rounded">
