--- a/ourteam.html
+++ b/ourteam.html
@@ -151,7 +151,7 @@
 
 
         <!-- About Start -->
-        <div class="container-fluid py-5">
+        <div class="container-fluid py-sm-0 py-5">
             <div class="container py-5">
                 <div class="row g-5">
                     <div class="col-xl-4 wow fadeInLeft" data-wow-delay="0.1s">
@@ -186,7 +186,7 @@
         <!-- About End -->
 
         <!-- About Start -->
-        <div class="container-fluid bg-light py-5">
+        <div class="container-fluid bg-light py-5 py-sm-0">
             <div class="container py-5">
                 <div class="row g-5">
                     <div class="col-xl-7 wow fadeInLeft" data-wow-delay="0.3s">
