udpate details of maninder

--- a/ourteam.html
+++ b/ourteam.html
@@ -216,6 +216,39 @@
         </div>
         <!-- About End -->
 
+        <!-- About Start -->
+        <div class="container-fluid py-sm-0 py-5">
+            <div class="container py-5">
+                <div class="row g-5">
+                    <div class="col-xl-4 wow fadeInLeft" data-wow-delay="0.1s">
+                        <div class="bg-light rounded">
+                            <img src="img/about-2.png" class="img-fluid w-100" style="margin-bottom: -7px;" alt="Image">
+                            <img src="img/about-3.jpg" class="img-fluid w-100 border-bottom border-5 border-primary"
+                                style="border-top-right-radius: 300px; border-top-left-radius: 300px;" alt="Image">
+                        </div>
+                    </div>
+                    <div class="col-xl-8 wow fadeInRight" data-wow-delay="0.3s">
+
+                        <h5 class="sub-title mb-4 pe-3">Maninder Kaur</h5>
+
+                        <h4 class="customs-title"><em>Position:</em> Senior Associate</h4>
+
+                        <h3 class="customs-heading mb-4">Education: B.Sc., LL.B., LL.M.</h3>
+
+                        <p><strong>Maninder Kaur</strong> is a dedicated Senior Associate at <strong>Lex Works</strong>, specializing in indirect taxation and patent law. With a strong academic foundation that includes a B.Sc., an LL.B., and an LL.M., she brings a wealth of knowledge and expertise to the team.</p>
+
+                        <p>Since joining the firm, Maninder Kaur has focused on navigating the complexities of indirect tax regulations and intellectual property rights, particularly in the area of patents. She has successfully managed numerous cases, providing clients with strategic advice and representation in both contentious and non-contentious matters.</p>
+
+                        <p>Known for her meticulous approach and strong analytical skills, Maninder Kaur excels in developing tailored strategies that align with clients' business objectives while ensuring compliance with legal standards. She is committed to building lasting relationships with clients, understanding their unique needs, and advocating effectively on their behalf. She is also dedicated to continuous professional development, actively participating in relevant workshops and seminars to stay current in the evolving fields of taxation and intellectual property law.</p>
+
+                        <p class="mb-4">At <strong>Lex Works</strong>, Maninder Kaur is focused on contributing to the firm's growth and success, leveraging her expertise to help clients navigate the complexities of indirect taxation and patent law with confidence.</p>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- About End -->
+
 
        <!-- Footer Start -->
        <div class="container-fluid footer py-5 wow fadeIn" data-wow-delay="0.2s">
