udpate linking for multiple pages

--- a/index.html
+++ b/index.html
@@ -140,40 +140,40 @@
             <a href="aboutus.html" class="nav-item nav-link">About Us</a>
             <a href="ourteam.html" class="nav-item nav-link">Our Team</a>
             <div class="nav-item dropdown">
-              <a href="#" class="nav-link" data-bs-toggle="dropdown">
+              <a href="javascript:void(0);" class="nav-link" data-bs-toggle="dropdown">
                 <span class="dropdown-toggle">Practice Area</span>
               </a>
               <div class="dropdown-menu m-0">
-                <div class="d-flex">
+                <div class="d-flex flex-column flex-md-row">
                   <div class="py-1 px-2">
                     <div class="py-2 cPx-3 text-dark text-inline">
                       <strong>Expertise</strong>
                     </div>
-                    <a href="#" class="dropdown-item">GST</a>
-                    <a href="#" class="dropdown-item">Customs</a>
-                    <a href="#" class="dropdown-item">ED (PMLA/FEMA)</a>
-                    <a href="#" class="dropdown-item">IPR</a>
+                    <a href="gst.html" class="dropdown-item">GST</a>
+                    <a href="customs.html" class="dropdown-item">Customs</a>
+                    <a href="ed-pmla-fema.html" class="dropdown-item">ED (PMLA/FEMA)</a>
+                    <a href="ipr.html" class="dropdown-item">IPR</a>
                   </div>
                   <div class="py-1 px-2">
                     <div class="py-2 cPx-3 text-dark text-inline">
                       <strong>Other Areas</strong>
                     </div>
-                    <a href="#" class="dropdown-item">Arbitration</a>
-                    <a href="#" class="dropdown-item">Banking & Finance</a>
-                    <a href="#" class="dropdown-item">Corporate Law</a>
-                    <a href="#" class="dropdown-item">Criminal & Civil Litigation</a>
-                    <a href="#" class="dropdown-item">Cyber Law</a>
-                    <a href="#" class="dropdown-item">
+                    <a href="arbitration.html" class="dropdown-item">Arbitration</a>
+                    <a href="banking-and-finance.html" class="dropdown-item">Banking & Finance</a>
+                    <a href="corporate-law.html" class="dropdown-item">Corporate Law</a>
+                    <a href="criminal-and-civil-litigation.html" class="dropdown-item">Criminal & Civil Litigation</a>
+                    <a href="cyber-law.html" class="dropdown-item">Cyber Law</a>
+                    <a href="consumer-protection-law.html" class="dropdown-item">
                       <div class="menuItem">
                         <span>Consumer Protection Law</span>
                         <!-- <span class="menuItemSmall">(Alphabetical order)</span> -->
                       </div>
                     </a>
-                    <a href="#" class="dropdown-item">Contractual Law</a>
-                    <a href="#" class="dropdown-item">Direct Tax</a>
-                    <a href="#" class="dropdown-item">Family Law</a>
-                    <a href="#" class="dropdown-item">Insolvency</a>
-                    <a href="#" class="dropdown-item">Real State Law</a>
+                    <a href="contractual-law.html" class="dropdown-item">Contractual Law</a>
+                    <a href="direct-tax.html" class="dropdown-item">Direct Tax</a>
+                    <a href="family-law.html" class="dropdown-item">Family Law</a>
+                    <a href="insolvency.html" class="dropdown-item">Insolvency</a>
+                    <a href="real-state-law.html" class="dropdown-item">Real State Law</a>
                   </div>
                 </div>
               </div>
@@ -183,7 +183,7 @@
           <!-- <button class="btn btn-primary btn-md-square border-secondary mb-3 mb-md-3 mb-lg-0 me-3"
                         data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fas fa-search"></i></button> -->
           <a
-            href=""
+            href="contactus.html"
             class="btn btn-primary border-secondary rounded-pill py-2 px-4 px-lg-3 mb-3 mb-md-3 mb-lg-0"
             >Consultation Session</a
           >
