udpate text color

--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
                       <h4 class="text-white h5 mb-4 py-3">CUSTOMS</h4>
                     </a>
                     <div class="px-4">
-                      <p class="mb-4">
+                      <p class="mb-4 text-white">
                         At <strong>Lex Works</strong>, we recognize that
                         navigating the complexities of customs law is crucial
                         for businesses engaged in international trade.
@@ -652,7 +652,7 @@
                       </h4>
                     </a>
                     <div class="px-4">
-                      <p class="mb-4">
+                      <p class="mb-4 text-white">
                         At <strong>Lex Works</strong>, our dedicated GST Law
                         team offers a comprehensive suite of services designed
                         to navigate the complexities of Goods and Services Tax.
@@ -694,7 +694,7 @@
                       <h4 class="text-white h5 mb-4 py-3">ED/PMLA/FEMA</h4>
                     </a>
                     <div class="px-4">
-                      <p class="mb-4">
+                      <p class="mb-4 text-white">
                         At <strpng>Lex Works</strpng>, our Enforcement
                         Directorate (ED) Litigation Practice focuses on
                         providing robust legal support in matters involving
@@ -737,7 +737,7 @@
                       <h4 class="text-white h5 mb-4 py-3">IPR</h4>
                     </a>
                     <div class="px-4">
-                      <p class="mb-4">
+                      <p class="mb-4 text-white">
                         At <strong>Lex Works</strong>, our Intellectual Property
                         Rights (IPR) Litigation Practice is dedicated to
                         protecting and enforcing the creative and innovative
@@ -780,7 +780,7 @@
                       <h4 class="text-white h5 mb-4 py-3">Cyber Law</h4>
                     </a>
                     <div class="px-4">
-                      <p class="mb-4">
+                      <p class="mb-4 text-white">
                         Our Cyber Law Practice at
                         <strong>Lex Works</strong> focuses on the legal
                         challenges and opportunities presented by the digital
@@ -827,7 +827,7 @@
                       </h4>
                     </a>
                     <div class="px-4">
-                      <p class="mb-4">
+                      <p class="mb-4 text-white">
                         At <strong>Lex Works</strong>, our Banking and Finance
                         Law Practice is dedicated to providing comprehensive
                         legal support to financial institutions, corporations,
@@ -873,7 +873,7 @@
                       </h4>
                     </a>
                     <div class="px-4">
-                      <p class="mb-4">
+                      <p class="mb-4 text-white">
                         At <strong>Lex Works</strong>, our Criminal and Civil
                         Litigation Practice is committed to providing robust
                         legal representation in both criminal and civil matters.
@@ -917,7 +917,7 @@
                       <h4 class="text-white mb-4 py-3">Arbitration Practice</h4>
                     </a>
                     <div class="px-4">
-                      <p class="mb-4">
+                      <p class="mb-4 text-white">
                         At <strong>Lex Works</strong>, our Arbitration Practice
                         provides expert legal representation in resolving
                         disputes efficiently and effectively through
@@ -960,7 +960,7 @@
                       <h4 class="text-white h5 mb-4 py-3">Insolvency Law</h4>
                     </a>
                     <div class="px-4">
-                      <p class="mb-4">
+                      <p class="mb-4 text-white">
                         At <strong>Lex Works</strong>, our Insolvency Practice
                         provides expert guidance and representation in matters
                         of corporate and personal insolvency.
